Kinda fix text wrapping on filter checkboxes

--- a/assets/results_template/style.scss
+++ b/assets/results_template/style.scss
@@ -378,10 +378,15 @@ div#download-info {
 div#filters div.modal-body {
   div {
     margin: 0.75em 0;
-  }
-  input {
-    vertical-align: middle;
-    margin-right: 0.25em;
+
+    label {
+      display: inline;
+    }
+
+    input {
+      vertical-align: middle;
+      margin-right: 0.25em;
+    }
   }
 }
 
